OCL2RA/src/main/java/ocl2ra/ANTLR/OCL2RAParser.java
// Generated from /Users/novelistchan/Documents/OCLfo2SQL/OCL2RA/src/main/java/ocl2ra/ANTLR/OCL2RAParser.g4 by ANTLR 4.10.1
package ocl2ra.ANTLR;

import java.util.List;
import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class OCL2RAParser extends Parser {

    static {
        RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
        new PredictionContextCache();
    public static final int
        SPACE = 1, EQ = 2, GT = 3, LT = 4, NE = 5, GE = 6, LE = 7, AND = 8, OR = 9, XOR = 10, IMPLY = 11,
        NOT = 12, AR = 13, DOT = 14, LB = 15, RB = 16, SEP = 17, ALL = 18, FA = 19, SE = 20, STRING = 21,
        INT = 22;
    public static final int
        RULE_oclExpr = 0, RULE_oclBool = 1, RULE_oclSet = 2, RULE_oclSingle = 3,
        RULE_oclObject = 4, RULE_role = 5, RULE_attr = 6, RULE_var = 7, RULE_oclClass = 8,
        RULE_constant = 9, RULE_compOp = 10, RULE_boolOp = 11;

    private static String[] makeRuleNames() {
        return new String[]{
            "oclExpr", "oclBool", "oclSet", "oclSingle", "oclObject", "role", "attr",
            "var", "oclClass", "constant", "compOp", "boolOp"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
            null, null, "'='", "'>'", "'<'", "'<>'", "'>='", "'<='", "'and'", "'or'",
            "'xor'", "'implies'", "'not'", "'->'", "'.'", "'('", "')'", "'|'", "'allInstances()'",
            "'forAll'", "'select'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
            null, "SPACE", "EQ", "GT", "LT", "NE", "GE", "LE", "AND", "OR", "XOR",
            "IMPLY", "NOT", "AR", "DOT", "LB", "RB", "SEP", "ALL", "FA", "SE", "STRING",
            "INT"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "OCL2RAParser.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public OCL2RAParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class OclExprContext extends ParserRuleContext {

        public TerminalNode EOF() {
            return getToken(OCL2RAParser.EOF, 0);
        }

        public List<OclBoolContext> oclBool() {
            return getRuleContexts(OclBoolContext.class);
        }

        public OclBoolContext oclBool(int i) {
            return getRuleContext(OclBoolContext.class, i);
        }

        public OclExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oclExpr;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).enterOclExpr(this);
			}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).exitOclExpr(this);
			}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OCL2RAParserVisitor) {
				return ((OCL2RAParserVisitor<? extends T>) visitor).visitOclExpr(this);
			} else {
				return visitor.visitChildren(this);
			}
        }
    }

    public final OclExprContext oclExpr() throws RecognitionException {
        OclExprContext _localctx = new OclExprContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_oclExpr);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(25);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(24);
                            oclBool(0);
                        }
                    }
                    setState(27);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == STRING || _la == INT);
                setState(29);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OclBoolContext extends ParserRuleContext {

        public OclBoolContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oclBool;
        }

        public OclBoolContext() {
        }

        public void copyFrom(OclBoolContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class BoolForAllContext extends OclBoolContext {

        public OclSetContext oclSet() {
            return getRuleContext(OclSetContext.class, 0);
        }

        public TerminalNode AR() {
            return getToken(OCL2RAParser.AR, 0);
        }

        public TerminalNode FA() {
            return getToken(OCL2RAParser.FA, 0);
        }

        public TerminalNode LB() {
            return getToken(OCL2RAParser.LB, 0);
        }

        public VarContext var() {
            return getRuleContext(VarContext.class, 0);
        }

        public TerminalNode SEP() {
            return getToken(OCL2RAParser.SEP, 0);
        }

        public OclBoolContext oclBool() {
            return getRuleContext(OclBoolContext.class, 0);
        }

        public TerminalNode RB() {
            return getToken(OCL2RAParser.RB, 0);
        }

        public BoolForAllContext(OclBoolContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).enterBoolForAll(this);
			}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).exitBoolForAll(this);
			}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OCL2RAParserVisitor) {
				return ((OCL2RAParserVisitor<? extends T>) visitor).visitBoolForAll(this);
			} else {
				return visitor.visitChildren(this);
			}
        }
    }

    public static class BoolCompareContext extends OclBoolContext {

        public List<OclSingleContext> oclSingle() {
            return getRuleContexts(OclSingleContext.class);
        }

        public OclSingleContext oclSingle(int i) {
            return getRuleContext(OclSingleContext.class, i);
        }

        public CompOpContext compOp() {
            return getRuleContext(CompOpContext.class, 0);
        }

        public BoolCompareContext(OclBoolContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).enterBoolCompare(this);
			}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).exitBoolCompare(this);
			}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OCL2RAParserVisitor) {
				return ((OCL2RAParserVisitor<? extends T>) visitor).visitBoolCompare(this);
			} else {
				return visitor.visitChildren(this);
			}
        }
    }

    public static class BoolCalcContext extends OclBoolContext {

        public List<OclBoolContext> oclBool() {
            return getRuleContexts(OclBoolContext.class);
        }

        public OclBoolContext oclBool(int i) {
            return getRuleContext(OclBoolContext.class, i);
        }

        public BoolOpContext boolOp() {
            return getRuleContext(BoolOpContext.class, 0);
        }

        public BoolCalcContext(OclBoolContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).enterBoolCalc(this);
			}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).exitBoolCalc(this);
			}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OCL2RAParserVisitor) {
				return ((OCL2RAParserVisitor<? extends T>) visitor).visitBoolCalc(this);
			} else {
				return visitor.visitChildren(this);
			}
        }
    }

    public final OclBoolContext oclBool() throws RecognitionException {
        return oclBool(0);
    }

    private OclBoolContext oclBool(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        OclBoolContext _localctx = new OclBoolContext(_ctx, _parentState);
        OclBoolContext _prevctx = _localctx;
        int _startState = 2;
        enterRecursionRule(_localctx, 2, RULE_oclBool, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(45);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                    case 1: {
                        _localctx = new BoolForAllContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;

                        setState(32);
                        oclSet();
                        setState(33);
                        match(AR);
                        setState(34);
                        match(FA);
                        setState(35);
                        match(LB);
                        setState(36);
                        var();
                        setState(37);
                        match(SEP);
                        setState(38);
                        oclBool(0);
                        setState(39);
                        match(RB);
                    }
                    break;
                    case 2: {
                        _localctx = new BoolCompareContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(41);
                        oclSingle();
                        setState(42);
                        compOp();
                        setState(43);
                        oclSingle();
                    }
                    break;
                }
                _ctx.stop = _input.LT(-1);
                setState(53);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
						if (_parseListeners != null) {
							triggerExitRuleEvent();
						}
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new BoolCalcContext(
                                    new OclBoolContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_oclBool);
                                setState(47);
								if (!(precpred(_ctx, 1))) {
									throw new FailedPredicateException(this, "precpred(_ctx, 1)");
								}
                                setState(48);
                                boolOp();
                                setState(49);
                                oclBool(2);
                            }
                        }
                    }
                    setState(55);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public static class OclSetContext extends ParserRuleContext {

        public OclSetContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oclSet;
        }

        public OclSetContext() {
        }

        public void copyFrom(OclSetContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ClassAllContext extends OclSetContext {

        public OclClassContext oclClass() {
            return getRuleContext(OclClassContext.class, 0);
        }

        public TerminalNode DOT() {
            return getToken(OCL2RAParser.DOT, 0);
        }

        public TerminalNode ALL() {
            return getToken(OCL2RAParser.ALL, 0);
        }

        public ClassAllContext(OclSetContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).enterClassAll(this);
			}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).exitClassAll(this);
			}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OCL2RAParserVisitor) {
				return ((OCL2RAParserVisitor<? extends T>) visitor).visitClassAll(this);
			} else {
				return visitor.visitChildren(this);
			}
        }
    }

    public final OclSetContext oclSet() throws RecognitionException {
        OclSetContext _localctx = new OclSetContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_oclSet);
        try {
            _localctx = new ClassAllContext(_localctx);
            enterOuterAlt(_localctx, 1);
            {
                setState(56);
                oclClass();
                setState(57);
                match(DOT);
                setState(58);
                match(ALL);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OclSingleContext extends ParserRuleContext {

        public OclSingleContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oclSingle;
        }

        public OclSingleContext() {
        }

        public void copyFrom(OclSingleContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ConstantSingleContext extends OclSingleContext {

        public ConstantContext constant() {
            return getRuleContext(ConstantContext.class, 0);
        }

        public ConstantSingleContext(OclSingleContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).enterConstantSingle(this);
			}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).exitConstantSingle(this);
			}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OCL2RAParserVisitor) {
				return ((OCL2RAParserVisitor<? extends T>) visitor).visitConstantSingle(this);
			} else {
				return visitor.visitChildren(this);
			}
        }
    }

    public static class ObjectSingleContext extends OclSingleContext {

        public OclObjectContext oclObject() {
            return getRuleContext(OclObjectContext.class, 0);
        }

        public TerminalNode DOT() {
            return getToken(OCL2RAParser.DOT, 0);
        }

        public AttrContext attr() {
            return getRuleContext(AttrContext.class, 0);
        }

        public ObjectSingleContext(OclSingleContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).enterObjectSingle(this);
			}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).exitObjectSingle(this);
			}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OCL2RAParserVisitor) {
				return ((OCL2RAParserVisitor<? extends T>) visitor).visitObjectSingle(this);
			} else {
				return visitor.visitChildren(this);
			}
        }
    }

    public final OclSingleContext oclSingle() throws RecognitionException {
        OclSingleContext _localctx = new OclSingleContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_oclSingle);
        try {
            setState(65);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                case 1:
                    _localctx = new ObjectSingleContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(60);
                    oclObject(0);
                    setState(61);
                    match(DOT);
                    setState(62);
                    attr();
                }
                break;
                case 2:
                    _localctx = new ConstantSingleContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(64);
                    constant();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OclObjectContext extends ParserRuleContext {

        public OclObjectContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oclObject;
        }

        public OclObjectContext() {
        }

        public void copyFrom(OclObjectContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class RoleObjContext extends OclObjectContext {

        public OclObjectContext oclObject() {
            return getRuleContext(OclObjectContext.class, 0);
        }

        public TerminalNode DOT() {
            return getToken(OCL2RAParser.DOT, 0);
        }

        public RoleContext role() {
            return getRuleContext(RoleContext.class, 0);
        }

        public RoleObjContext(OclObjectContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).enterRoleObj(this);
			}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).exitRoleObj(this);
			}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OCL2RAParserVisitor) {
				return ((OCL2RAParserVisitor<? extends T>) visitor).visitRoleObj(this);
			} else {
				return visitor.visitChildren(this);
			}
        }
    }

    public static class VarObjContext extends OclObjectContext {

        public VarContext var() {
            return getRuleContext(VarContext.class, 0);
        }

        public VarObjContext(OclObjectContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).enterVarObj(this);
			}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).exitVarObj(this);
			}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OCL2RAParserVisitor) {
				return ((OCL2RAParserVisitor<? extends T>) visitor).visitVarObj(this);
			} else {
				return visitor.visitChildren(this);
			}
        }
    }

    public final OclObjectContext oclObject() throws RecognitionException {
        return oclObject(0);
    }

    private OclObjectContext oclObject(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        OclObjectContext _localctx = new OclObjectContext(_ctx, _parentState);
        OclObjectContext _prevctx = _localctx;
        int _startState = 8;
        enterRecursionRule(_localctx, 8, RULE_oclObject, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    _localctx = new VarObjContext(_localctx);
                    _ctx = _localctx;
                    _prevctx = _localctx;

                    setState(68);
                    var();
                }
                _ctx.stop = _input.LT(-1);
                setState(75);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
						if (_parseListeners != null) {
							triggerExitRuleEvent();
						}
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new RoleObjContext(
                                    new OclObjectContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_oclObject);
                                setState(70);
								if (!(precpred(_ctx, 1))) {
									throw new FailedPredicateException(this, "precpred(_ctx, 1)");
								}
                                setState(71);
                                match(DOT);
                                setState(72);
                                role();
                            }
                        }
                    }
                    setState(77);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public static class RoleContext extends ParserRuleContext {

        public TerminalNode STRING() {
            return getToken(OCL2RAParser.STRING, 0);
        }

        public RoleContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_role;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).enterRole(this);
			}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).exitRole(this);
			}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OCL2RAParserVisitor) {
				return ((OCL2RAParserVisitor<? extends T>) visitor).visitRole(this);
			} else {
				return visitor.visitChildren(this);
			}
        }
    }

    public final RoleContext role() throws RecognitionException {
        RoleContext _localctx = new RoleContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_role);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(78);
                match(STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AttrContext extends ParserRuleContext {

        public TerminalNode STRING() {
            return getToken(OCL2RAParser.STRING, 0);
        }

        public AttrContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_attr;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).enterAttr(this);
			}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).exitAttr(this);
			}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OCL2RAParserVisitor) {
				return ((OCL2RAParserVisitor<? extends T>) visitor).visitAttr(this);
			} else {
				return visitor.visitChildren(this);
			}
        }
    }

    public final AttrContext attr() throws RecognitionException {
        AttrContext _localctx = new AttrContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_attr);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(80);
                match(STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VarContext extends ParserRuleContext {

        public TerminalNode STRING() {
            return getToken(OCL2RAParser.STRING, 0);
        }

        public VarContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_var;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).enterVar(this);
			}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).exitVar(this);
			}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OCL2RAParserVisitor) {
				return ((OCL2RAParserVisitor<? extends T>) visitor).visitVar(this);
			} else {
				return visitor.visitChildren(this);
			}
        }
    }

    public final VarContext var() throws RecognitionException {
        VarContext _localctx = new VarContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_var);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(82);
                match(STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OclClassContext extends ParserRuleContext {

        public TerminalNode STRING() {
            return getToken(OCL2RAParser.STRING, 0);
        }

        public OclClassContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oclClass;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).enterOclClass(this);
			}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).exitOclClass(this);
			}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OCL2RAParserVisitor) {
				return ((OCL2RAParserVisitor<? extends T>) visitor).visitOclClass(this);
			} else {
				return visitor.visitChildren(this);
			}
        }
    }

    public final OclClassContext oclClass() throws RecognitionException {
        OclClassContext _localctx = new OclClassContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_oclClass);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(84);
                match(STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ConstantContext extends ParserRuleContext {

        public TerminalNode STRING() {
            return getToken(OCL2RAParser.STRING, 0);
        }

        public TerminalNode INT() {
            return getToken(OCL2RAParser.INT, 0);
        }

        public ConstantContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_constant;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).enterConstant(this);
			}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).exitConstant(this);
			}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OCL2RAParserVisitor) {
				return ((OCL2RAParserVisitor<? extends T>) visitor).visitConstant(this);
			} else {
				return visitor.visitChildren(this);
			}
        }
    }

    public final ConstantContext constant() throws RecognitionException {
        ConstantContext _localctx = new ConstantContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_constant);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(86);
                _la = _input.LA(1);
                if (!(_la == STRING || _la == INT)) {
                    _errHandler.recoverInline(this);
                } else {
					if (_input.LA(1) == Token.EOF) {
						matchedEOF = true;
					}
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CompOpContext extends ParserRuleContext {

        public TerminalNode EQ() {
            return getToken(OCL2RAParser.EQ, 0);
        }

        public TerminalNode GE() {
            return getToken(OCL2RAParser.GE, 0);
        }

        public TerminalNode LE() {
            return getToken(OCL2RAParser.LE, 0);
        }

        public TerminalNode GT() {
            return getToken(OCL2RAParser.GT, 0);
        }

        public TerminalNode LT() {
            return getToken(OCL2RAParser.LT, 0);
        }

        public TerminalNode NE() {
            return getToken(OCL2RAParser.NE, 0);
        }

        public CompOpContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_compOp;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).enterCompOp(this);
			}
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
			if (listener instanceof OCL2RAParserListener) {
				((OCL2RAParserListener) listener).exitCompOp(this);
			}
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof OCL2RAParserVisitor) {
				return ((OCL2RAParserVisitor<? extends T>) visitor).visitCompOp(this);
			} else {
				return visitor.visitChildren(this);
			}
        }
    }

    public final CompOpContext compOp() throws RecognitionException {
        CompOpContext _localctx = new CompOpContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_compOp);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(88);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 &&
                    ((1L << _la) & ((1L << EQ) | (1L << GT) | (1L << LT) | (1L << NE) | (1L << GE)
                        | (1L << LE))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
					if (_input.LA(1) == Token.EOF) {
						matchedEOF = true;
					}
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class BoolOpContext extends ParserRuleContext {

        public TerminalNode AND() {
            return getToken(OCL2RAParser.AND, 0);
        }
